--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                    <li><a href="#menu">ABOUT US</a></li>
 
                  <li><a href="#delicious ">ORDERS</a></li>
-                   <li><a href="#our_story"></a>DISHES</li> 
+                   <li><a href="#our_story">DISHES</a></li> 
 
                 </nav>
             </ul>
@@ -141,7 +141,8 @@
 
                     <input type="text" id="comment" placeholder=" write your comment here.">
 
-                    <input type="submit" value="comment" id="comment1" >
+                    <input type="submit" value="comment" id="comment1" ><br>
+                    <h3>Thanks and regards from Aijaz ahmad wani, Abinov bohra and Anurag </h3>
 
     </center>
     </div>
