--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <img src="images/images (1).jpg" alt="">
                         <div class="caption">
                             <h3>punjabi</h3>
-                            <p>only for you not wait order quicqly </p>
+                            <p>only for you not wait order quickly </p>
                         </div>
                     </div> 
                 </a>
