--- a/index.html
+++ b/index.html
@@ -129,6 +129,28 @@
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <a href="products.php#shirts" ><div class="thumbnail">
+                        <img src="images/rajasthani.jpg" alt="">
+                        <div class="caption">
+                            <h3>Rajasthani</h3>
+                            <p>Try once come always</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-lg-offset-4">
+                <a href="products.php#watches" ><div class="thumbnail">
+                       <img src="images/download.jpg" alt="">
+                        <div class="caption">
+                            <h3>chinees</h3>
+                            <p>most wanted sweet and delicious </p>
+                        </div>
+                    </div> 
+                </a>
+            </div>
+        </div>
     </div>
 
 <div class="background">
